# generalmotors

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
.circleci/: config.yml
aio/: BUILD.bazel  local_packages_util.bzl  package.json
aio/content/examples/: examples.bzl
aio/scripts/: BUILD.bazel
aio/tools/: BUILD.bazel
aio/tools/examples/: BUILD.bazel
aio/tools/examples/shared/: package.json
aio/tools/transforms/: BUILD.bazel
aio/tools/transforms/angular-api-package/: BUILD.bazel
aio/tools/transforms/angular-base-package/: BUILD.bazel
aio/tools/transforms/angular-content-package/: BUILD.bazel
aio/tools/transforms/angular-errors-package/: BUILD.bazel
aio/tools/transforms/angular-extended-diagnostics-package/: BUILD.bazel
aio/tools/transforms/angular.io-package/: BUILD.bazel
aio/tools/transforms/authors-package/: BUILD.bazel
aio/tools/transforms/cli-docs-package/: BUILD.bazel
aio/tools/transforms/content-package/: BUILD.bazel
aio/tools/transforms/examples-package/: BUILD.bazel
aio/tools/transforms/helpers/: BUILD.bazel
aio/tools/transforms/links-package/: BUILD.bazel
aio/tools/transforms/remark-package/: BUILD.bazel
aio/tools/transforms/target-package/: BUILD.bazel
devtools/projects/demo-no-zone/src/: BUILD.bazel
devtools/projects/ng-devtools/: BUILD.bazel
devtools/projects/ng-devtools-backend/: BUILD.bazel
devtools/projects/protocol/: BUILD.bazel
devtools/projects/shared-utils/: BUILD.bazel
devtools/projects/shell-browser/src/: BUILD.bazel
devtools/src/: BUILD.bazel
devtools/tools/: defaults.bzl
devtools/tools/esbuild/: BUILD.bazel  index.bzl
integration/: index.bzl
modules/benchmarks/: e2e_test.bzl
modules/benchmarks/src/class_bindings/: BUILD.bazel
modules/benchmarks/src/js-web-frameworks/: BUILD.bazel
modules/benchmarks/src/js-web-frameworks/ng2/: BUILD.bazel
modules/benchmarks/src/styling/: BUILD.bazel
modules/benchmarks/src/styling/ng2/: BUILD.bazel
modules/playground/e2e_test/: example_test.bzl
tools/: defaults.bzl
tools/esm-interop/: nodejs-rules.bzl
tools/saucelabs/: BUILD.bazel
tools/symbol-extractor/: BUILD.bazel
(+23 files in other folders)
