load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "perf_lib",
    testonly = True,
    srcs = ["js-web-frameworks.perf-spec.ts"],
    tsconfig = "//modules/benchmarks:tsconfig-e2e.json",
    deps = [
        # TODO: Migrate to rules_js equivalent - @npm/@angular/build-tooling causes cycle detection errors
        # "@npm//@angular/build-tooling/bazel/benchmark/driver-utilities",
        "@npm//protractor",
    ],
)
