load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//modules/benchmarks:__subpackages__"])

ts_library(
    name = "tests_lib",
    testonly = True,
    srcs = ["styling_perf.spec.ts"],
    tsconfig = "//modules/benchmarks:tsconfig-e2e.json",
    deps = [
        # TODO: Migrate to rules_js equivalent - @npm/@angular/build-tooling causes cycle detection errors
        # "@npm//@angular/build-tooling/bazel/benchmark/driver-utilities",
        "@npm//protractor",
    ],
)
